<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TEST_Resultats_Partida"
        android:gravity="center"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TEST_Dia_Hora"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/Day_Hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TEST_Log"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/Log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TEST_Email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/Email_ToSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TEST_Email_Desti"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/button_Email"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/TEST_Send_Email"
            android:drawableLeft="@drawable/email_icon"
            android:onClick="clickSend"/>
        <Button
            android:id="@+id/button_Return"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/TEST_New_Game"
            android:drawableLeft="@drawable/flecha"
            android:onClick="clickNew"/>
        <Button
            android:id="@+id/button_Exit"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/MAIN_Sortir"
            android:drawableLeft="@drawable/shutdown"
            android:onClick="clickExit"/>

    </LinearLayout>
</LinearLayout>